add update server endpoint
