# services/gameplay/internal/api/handler/server/rpc_update_server.go
@@ -1,0 +1,136 @@
+package server
+
+import (
+	"context"
+	"errors"
+
+	"buf.build/go/protovalidate"
+
+	"github.com/google/uuid"
+	"github.com/jackc/pgx/v5/pgtype"
+	"github.com/rs/zerolog/log"
+	"github.com/spazzle-io/spazzle-api/services/gameplay/internal/api/handler"
+	db "github.com/spazzle-io/spazzle-api/services/gameplay/internal/db/sqlc"
+	authPb "github.com/spazzle-io/spazzle-api/services/proto/auth/auth/v1"
+	pb "github.com/spazzle-io/spazzle-api/services/proto/gameplay/gameplay/v1"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (h *Handler) UpdateServer(ctx context.Context, req *pb.UpdateServerRequest) (*pb.UpdateServerResponse, error) {
+	logger := log.With().Str("user_id", req.GetUserId()).Str("server_id", req.GetServerId()).Logger()
+
+	violations := validateUpdateServerRequest(req)
+	if violations != nil {
+		return nil, handler.InvalidArgumentError(violations)
+	}
+
+	userId, err := uuid.Parse(req.GetUserId())
+	if err != nil {
+		logger.Error().Err(err).Msg("invalid user id")
+		return nil, status.Error(codes.InvalidArgument, handler.InvalidUserIdError)
+	}
+
+	serverId, err := uuid.Parse(req.GetServerId())
+	if err != nil {
+		logger.Error().Err(err).Msg("invalid server id")
+		return nil, status.Error(codes.InvalidArgument, handler.InvalidServerIdError)
+	}
+
+	_, err = h.authService.VerifyAccessToken(ctx, h.config.ServiceName, &authPb.VerifyAccessTokenRequest{
+		UserId: req.GetUserId(),
+	})
+	if err != nil {
+		logger.Error().Err(err).Msg("access token verification failed")
+		return nil, status.Error(codes.Unauthenticated, handler.UnauthorizedAccessError)
+	}
+
+	permissions, err := h.store.GetServerUserPermissions(ctx, db.GetServerUserPermissionsParams{
+		UserID:   userId,
+		ServerID: serverId,
+	})
+	if err != nil && !errors.Is(err, db.RecordNotFoundError) {
+		logger.Error().Err(err).Msg("failed to get server permissions")
+		return nil, status.Error(codes.Internal, handler.InternalServerError)
+	}
+
+	if !permissions.HasElevatedPermissions {
+		logger.Warn().Msg("user does not have permission to update server")
+		return nil, status.Error(codes.Unauthenticated, handler.UnauthorizedAccessError)
+	}
+
+	stakePerGame, err := db.ParseWeiStrToBigInt(req.GetStakePerGame().GetValue())
+	if err != nil && req.GetStakePerGame() != nil {
+		logger.Error().Err(err).Msg("invalid stake per game")
+		return nil, status.Error(codes.InvalidArgument, handler.InvalidStakePerGameError)
+	}
+
+	params := db.UpdateServerParams{
+		ServerID: serverId,
+		Name: pgtype.Text{
+			String: req.GetName().GetValue(),
+			Valid:  req.GetName() != nil,
+		},
+		IsPubliclyVisible: pgtype.Bool{
+			Bool:  req.GetIsPubliclyVisible().GetValue(),
+			Valid: req.GetIsPubliclyVisible() != nil,
+		},
+		StakePerGame: pgtype.Numeric{
+			Int:   stakePerGame,
+			Valid: req.GetStakePerGame() != nil,
+		},
+		NumRoundsPerGame: pgtype.Int4{
+			Int32: req.GetNumRoundsPerGame().GetValue(),
+			Valid: req.GetNumRoundsPerGame() != nil,
+		},
+		RoundDurationSecs: pgtype.Int4{
+			Int32: req.GetRoundDurationSecs().GetValue(),
+			Valid: req.GetRoundDurationSecs() != nil,
+		},
+		NumDrawingOptions: pgtype.Int4{
+			Int32: req.GetNumDrawingOptions().GetValue(),
+			Valid: req.GetNumDrawingOptions() != nil,
+		},
+	}
+
+	server, err := h.store.UpdateServer(ctx, params)
+	if err != nil {
+		logger.Error().Err(err).Msg("failed to update server")
+		return nil, handleUpdateServerError(err)
+	}
+
+	pbServer, err := mapDBServerToPb(&server)
+	if err != nil {
+		logger.Error().Err(err).Msg("failed to map db server to pb")
+		return nil, status.Error(codes.Internal, handler.InternalServerError)
+	}
+
+	response := &pb.UpdateServerResponse{
+		Server: pbServer,
+	}
+
+	logger.Info().Msg("server updated successfully")
+
+	return response, nil
+}
+
+func handleUpdateServerError(dbError error) error {
+	parsedDBError := db.ParseError(dbError)
+
+	if parsedDBError.Code == db.UniqueViolationCode {
+		if parsedDBError.ConstraintName == "servers_name_unique_unarchived_idx" {
+			return status.Errorf(codes.AlreadyExists, handler.ServerNameInUseError)
+		}
+	}
+
+	return status.Error(codes.Internal, handler.InternalServerError)
+}
+
+func validateUpdateServerRequest(req *pb.UpdateServerRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := protovalidate.Validate(req); err != nil {
+		violations = append(violations, handler.ProtovalidateViolation(err)...)
+	}
+
+	return violations
+}
